# rag_sentiment_classifier

./: .coverage  .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  AUDIT_REPORT.md  CODEBASE_AUDIT_REPORT.md  Dockerfile  ENHANCEMENTS.md  IMPLEMENTATION_PLAN.md  README.md  REFACTOR_PLAN.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/rag_sentiment_classifier/: __init__.py  __main__.py  api.py  cli.py
src/rag_sentiment_classifier/config/: __init__.py  logging_config.py  settings.py
src/rag_sentiment_classifier/middleware/: __init__.py  timeout.py
src/rag_sentiment_classifier/models/: __init__.py  document.py
src/rag_sentiment_classifier/prompts/: __init__.py  classification_prompts.py
src/rag_sentiment_classifier/providers/: __init__.py  cache_provider.py  llm_provider.py  ollama_provider.py  redis_provider.py
src/rag_sentiment_classifier/services/: __init__.py  classification_service.py
src/rag_sentiment_classifier/utils/: __init__.py  error_handler.py
tests/: conftest.py
tests/unit/: test_models.py  test_providers.py  test_service.py  test_settings.py
