[tool.poetry]
name = "rag-sentiment-classifier"
version = "0.1.0"
description = "Minimal RAG sentiment classification prototype using LangChain and Ollama."
authors = ["DataAnalytics Corp"]
readme = "README.md"
packages = [{ include = "rag_sentiment_classifier", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = { version = "^0.30.6", extras = ["standard"] }
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
langchain-core = "^0.2.40"
langchain-community = "^0.2.17"
redis = "^5.0.8"
slowapi = "^0.1.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.0"
pytest-mock = "^3.12.0"
httpx = "^0.27.0"
faker = "^22.0.0"
ruff = "^0.8.0"
mypy = "^1.13.0"

[tool.pytest.ini_options]
addopts = "-v --cov=rag_sentiment_classifier --cov-report=term-missing --cov-report=html"
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*", "*/.venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
